fix: transition for visibility

--- a/components/dialog.scss
+++ b/components/dialog.scss
@@ -18,7 +18,8 @@
         align-items: center;
         justify-content: center;
 
-        transition: opacity 0.7s cubic-bezier(0.23, 1, 0.32, 1) 0.4s;
+        transition: opacity 0.7s cubic-bezier(0.23, 1, 0.32, 1) 0.4s, 
+                    visibility 0s ease 1s;
 
         > .dialog-content {
             display: flex;
